--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,12 @@
+*.xcuserdata
+*.DS_Store
+*.xcscmblueprint
+libs
+*.framework
+*.a
+*.xcworkspacedata
+xcshareddata
+
 # Xcode
 #
 # gitignore contributors: remember to update Global/Xcode.gitignore, Objective-C.gitignore & Swift.gitignore
